@@ -34,6 +34,15 @@ you're not logged in::
 
     >>> unprivileged_browser = Browser(app)
 
+Enable commenting.
+
+    >>> from zope.component import queryUtility
+    >>> from plone.registry.interfaces import IRegistry
+    >>> from plone.app.discussion.interfaces import IDiscussionSettings
+    >>> registry = queryUtility(IRegistry)
+    >>> settings = registry.forInterface(IDiscussionSettings)
+    >>> settings.globally_enabled = True
+
 
 Enable comment review workflow
 ------------------------------
